--- a/gui/package.json
+++ b/gui/package.json
@@ -26,14 +26,17 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^3.13.0",
     "prettier": "^3.0.0",
-    "svelte-eslint-parser": "^1.4.0",
+    "prettier-plugin-svelte": "^3.0.0",
     "svelte": "^5.0.0",
     "svelte-check": "^3.6.0",
+    "svelte-eslint-parser": "^1.4.0",
     "svelte-preprocess": "^5.0.0",
     "tslib": "^2.6.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.46.2",
-    "vite": "^5.0.0",
-    "prettier-plugin-svelte": "^3.0.0"
+    "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.8"
   }
 }
