--- a/wails-app/Makefile
+++ b/wails-app/Makefile
@@ -13,7 +13,7 @@ build:
 	@echo "Building ProcGuard for windows..."
 	cd frontend && bun run build
 	wails generate module
-	CGO_ENABLED=1 CC="zig cc -target x86_64-windows-gnu" GOOS=windows GOARCH=amd64 go build -tags desktop,production -ldflags="-w -X main.version=$(VERSION) -H windowsgui" -o build/bin/ProcGuard.exe
+	CGO_ENABLED=1 CC="zig cc -target x86_64-windows-gnu -Wl,--subsystem,windows" GOOS=windows GOARCH=amd64 go build -tags desktop,production -ldflags="-w -X main.version=$(VERSION) -H windowsgui" -o build/bin/ProcGuard.exe
 
 build-debug:
 	@echo "Building ProcGuard for windows (debug)..."
